k8s/namespace-goshop.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goshop
  labels:
    name: goshop
