k8s/outboxer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outboxer
  namespace: goshop
  labels:
    app: outboxer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outboxer
  template:
    metadata:
      labels:
        app: outboxer
    spec:
      containers:
        - name: outboxer
          image: goshop-outboxer:dev
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: outboxer-config-volume
              mountPath: /app/config
      volumes:
        - name: outboxer-config-volume
          configMap:
            name: outboxer-config
            items:
              - key: config.yaml
                path: config.yaml
