k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: goshop
  labels:
    app: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: grpc
      port: 7070
      targetPort: 7070
    - name: metrics
      port: 2112
      targetPort: 2112
