k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: goshop
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: http
      port: 8082
      targetPort: 8082
    - name: grpc
      port: 7072
      targetPort: 7072
