k8s/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: goshop
  labels:
    app: payments
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: http
      port: 8082
      targetPort: 8082
