k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: goshop
  labels:
    app: users
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - name: http
      port: 8081
      targetPort: 8081
